@startuml

title __USERSLIST's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.usersList {
      class com.architectica.socialcomponents.main.usersList.UsersListActivity {
          {static} + UPDATE_FOLLOWING_STATE_REQ : int
          {static} + UPDATE_FOLLOWING_STATE_RESULT_OK : int
          {static} + USER_ID_EXTRA_KEY : String
          {static} + USER_LIST_TYPE : String
          {static} - TAG : String
          - emptyListMessageTextView : TextView
          - progressBar : ProgressBar
          - recyclerView : RecyclerView
          - selectedItemPosition : int
          - swipeContainer : SwipeRefreshLayout
          - userID : String
          - userListType : int
          + createPresenter()
          + hideEmptyListMessage()
          + hideLocalProgress()
          + onProfilesIdsListLoaded()
          + showEmptyListMessage()
          + showLocalProgress()
          + updateSelectedItem()
          # onActivityResult()
          # onCreate()
          - initContentView()
          - initProfilesListRecyclerView()
          - openProfileActivity()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.usersList {
      class com.architectica.socialcomponents.main.usersList.UsersListPresenter {
          - activity : Activity
          - currentUserId : String
          + chooseActivityTitle()
          + loadFollowers()
          + loadFollowings()
          + loadUsersList()
          + onFollowButtonClick()
          + onRefresh()
          + unfollowUser()
          ~ UsersListPresenter()
          - followUser()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.usersList {
      interface com.architectica.socialcomponents.main.usersList.UsersListType {
          {static} + FOLLOWERS : int
          {static} + FOLLOWINGS : int
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.usersList {
      interface com.architectica.socialcomponents.main.usersList.UsersListView {
          {abstract} + hideEmptyListMessage()
          {abstract} + hideLocalProgress()
          {abstract} + onProfilesIdsListLoaded()
          {abstract} + setTitle()
          {abstract} + showEmptyListMessage()
          {abstract} + showLocalProgress()
          {abstract} + updateSelectedItem()
      }
    }
  }
  

  com.architectica.socialcomponents.main.usersList.UsersListActivity .up.|> com.architectica.socialcomponents.main.usersList.UsersListView
  com.architectica.socialcomponents.main.usersList.UsersListActivity -up-|> com.architectica.socialcomponents.main.base.BaseActivity
  com.architectica.socialcomponents.main.usersList.UsersListActivity o-- com.architectica.socialcomponents.adapters.UsersAdapter : usersAdapter
  com.architectica.socialcomponents.main.usersList.UsersListPresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter
  com.architectica.socialcomponents.main.usersList.UsersListPresenter o-- com.architectica.socialcomponents.managers.FollowManager : followManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
